--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.111.0"
 pydantic = "^2.7.1"
 uvicorn = "^0.29.0"
 sqlalchemy = "^2.0.30"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
